--- a/frontend/src/UploadVideoDemo.css
+++ b/frontend/src/UploadVideoDemo.css
@@ -4,25 +4,27 @@
 }
 
 .settingsBackGround2{
-  background-color: white;
+  background-color: red;
   display: flex;
   position: relative;
   width: 100%;
   height: 90vh;
-  top: 7%;
+
 }
 
 
 .centerContent {
   position: absolute;
   left: 50%;
-  top: 50%;
+  top:40%;
   transform:translateX(-50%) translateY(-50%);
 }
 
 .submitVidForm{
-  margin-top: 75px;
-  /* background-color: red; */
+  margin-top: 25px;
+  transform:translateX(-50%);
+  position:absolute;
+  left:50%;
   /* height:'30%'; */
 }
 
@@ -58,11 +60,13 @@
   display: flex; /* equal height of the children */
 }
 
+.imageFlex {
+  flex: 1.5; /* additionally, equal width */
+}
+
 .col {
   flex: 1; /* additionally, equal width */
-
-  padding: 1em;
-  border: solid;
+  background-color: red;
 }
 
 .submitFont{
