--- a/frontend/src/UploadVideoDemo.css
+++ b/frontend/src/UploadVideoDemo.css
@@ -1,6 +1,9 @@
 .uploadBigContainer{
     width:100%;
-    /* background-color: red; */
+    margin-top:25px;
+    background-color: #13c2c2;
+    padding:15px;
+    border-radius: 20px;
 }
 
 .settingsBackGround2{
@@ -16,7 +19,7 @@
 .centerContent {
   position: absolute;
   left: 50%;
-  top:40%;
+  top:50%;
   transform:translateX(-50%) translateY(-50%);
 }
 
@@ -25,7 +28,35 @@
   transform:translateX(-50%);
   position:absolute;
   left:50%;
+  background-color: red;
   /* height:'30%'; */
+}
+
+.enterEmail{
+  width:300px;
+  margin-top: 25px;
+}
+
+.uploadBackGround2 {
+  background:#f5f5f5;
+   height:200px;
+   display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+
+   justify-content: center;
+   align-items: center;
+   border-style:dashed; border-width:3px;
+   border-color: #bfbfbf;
+   width:200px;
+};
+
+.fitUploadAvatar2{
+
+  width:50%;
+  left:50%;
+  top:50%;
+  align-items: center;
+  transform: translateX(-50%) translateY(-50%);
+
 }
 
 .centerInnerContent {
@@ -42,11 +73,24 @@
 
 }
 
+.imageUploaded{
+  position: relative;
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+  overflow: none;
+  border-radius: 10px;
+  box-shadow: 0 10px 50px rgba(0, 0, 0, 0.08);
+
+  }
+
+
 .titleFont2{
-  margin-top: 40px;
-  font-size: 24px;
-  color: black;
-  margin-bottom: 15px;
+
+  font-size: 22px;
+  color: white;
+  font-weight: 550;
+
 }
 
 
@@ -57,6 +101,7 @@
   justify-content: center;
 }
 .row {
+  margin-top: 50px;
   display: flex; /* equal height of the children */
 }
 
@@ -65,8 +110,9 @@
 }
 
 .col {
+
   flex: 1; /* additionally, equal width */
-  background-color: red;
+  /* background-color: red; */
 }
 
 .submitFont{
